# Fictional-CryptoBoy

./: .coveragerc  .dockerignore  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  .pylintrc  API_SETUP_GUIDE.md  BATCH_FILES_UPDATE_SUMMARY.md  CLAUDE.md  CLAUDE_MD_UPDATE_SUMMARY.md  CODE_QUALITY_COMPLETION_REPORT.md  COINBASE_API_VALIDATION_REPORT.md  COINBASE_INTEGRATION_ANALYSIS.md  COINBASE_VALIDATION_REPORT.md  CryptoBoy_RDC.xml  DATA_PIPELINE_SUMMARY.md  DEPLOYMENT_STATUS.md  Dockerfile  Dockerfile.test  HEALTH_CHECK_FIX_PROPOSAL.md  HIGH_EVOLUTIONARY_FINAL_REPORT.md  HIGH_EVOLUTIONARY_REPORT.md  LAUNCHER_GUIDE.md  LAUNCH_PATTERN_SUMMARY.md  Makefile  PAPER_TRADING_STATUS.md  POST_REVIEW_SUMMARY.md  QUICKSTART.md  README.md  STRESS_TEST_RESULTS.md  TASK_1.2_COMPLETION_REPORT.md  TEST_RUN_2025-10-29_0251.md  TRADING_STATUS.md  UPDATE_NOTE_NOV_1_2025.md  VALIDATION_DEPLOYMENT_GUIDE.md  WORKFLOW_TESTING_IMPLEMENTATION.md  add_to_startup.bat  check_status.bat  coinbase_validation_results.json  (+20 more)
.claude/: settings.local.json
.codacy/: cli-config.yaml  results.json
.github/: PR2_FIXES_SUMMARY.md
backtest/: __init__.py  run_backtest.py
config/: backtest_config.json  live_config.json
data/: __init__.py  data_validator.py  market_data_collector.py  news_aggregator.py  sentiment_signals.csv
docs/: API_REFERENCE.md  ARCHITECTURE.md  ARCHITECTURE_DIAGRAMS.md  CAPACITY_AND_THRESHOLDS.md  CODE_QUALITY.md  CREDENTIALS_SECURITY_GUIDE.md  DASHBOARD_ENHANCEMENTS.md  DEVELOPER_GUIDE.md  DOCKER_OPTIMIZATION.md  EXAMPLES.md  FREQTRADE_API_REFERENCE.md  LMSTUDIO_SETUP.md  MESSAGE_SIGNING_GUIDE.md  MICROSERVICES_ARCHITECTURE.md  MONITOR_COLOR_GUIDE.md  PRINT_MIGRATION_GUIDE.md  RABBITMQ_MESSAGE_SCHEMAS.md  SENTIMENT_MODEL_COMPARISON.md  TESTING_GUIDE.md  TEST_RUN_TEMPLATE.md  TROUBLESHOOTING_GUIDE.md
llm/: __init__.py  huggingface_sentiment.py  lmstudio_adapter.py  model_manager.py  sentiment_analyzer.py  signal_processor.py
monitoring/: DASHBOARD_DEPLOYMENT_GUIDE.md  __init__.py  dashboard.html  dashboard_service.py  manual_trade_controller.py  requirements.txt  strategy_monitor.py  telegram_notifier.py
risk/: __init__.py  risk_manager.py
(+71 files in other folders)
