# Python Project Configuration
# VoidCat RDC - CryptoBoy Trading Bot

[tool.black]
line-length = 120
target-version = ['py310']
exclude = '''
/(
    \.git
  | \.venv
  | venv
  | __pycache__
  | user_data
  | logs
  | data
  | backtest_reports
  | \.egg-info
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 120
skip_glob = [
    "*.git/*",
    "*/__pycache__/*",
    "*/user_data/*",
    "*/logs/*",
    "*/data/*",
    "*/.venv/*",
    "*/venv/*"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = """
    -v
    --strict-markers
    --tb=short
    --cov=.
    --cov-report=term-missing
    --cov-report=html
"""
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "cryptoboy"
version = "1.0.0"
description = "LLM-Powered Cryptocurrency Trading Bot"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Wykeve Freeman (Sorrow Eternal)", email = "SorrowsCry86@voidcat.org"}
]
keywords = ["trading", "cryptocurrency", "llm", "finbert", "sentiment-analysis"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Investment",
]

[project.urls]
Homepage = "https://github.com/sorrowscry86/Fictional-CryptoBoy"
Documentation = "https://github.com/sorrowscry86/Fictional-CryptoBoy/blob/main/README.md"
Repository = "https://github.com/sorrowscry86/Fictional-CryptoBoy"
Issues = "https://github.com/sorrowscry86/Fictional-CryptoBoy/issues"
